--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
   "dependencies": {
     "next": "^12.0.8",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "recoil": "^0.6.1",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
+    "@types/node": "^17.0.13",
+    "@types/react": "^17.0.38",
     "eslint": "8.7.0",
-    "eslint-config-next": "^12.0.8"
+    "eslint-config-next": "^12.0.8",
+    "sass": "^1.49.0",
+    "typescript": "^4.5.5"
   }
 }
